# ShipDetectionApp

./: BlobContour.h  CMakeLists.txt  kmlWriter.cpp  kmlWriter.h  shapefileClip.cpp  shipDetectionApp.cpp  shipDetectionFilter.h
buildScripts/: build_cmake_project_vs10.bat  cmake_arguments.bat
trunk/shipDetectionApp/: BlobResult.cpp  CMakeLists.txt  blob.h  shapefileClip.h  shipDetectionApp.cpp  shipDetectionFilter.cpp  shipDetectionFilter.h
trunk/shipDetectionApp/buildScripts/: build_cmake_project_vs10.bat
