cmake_minimum_required(VERSION 2.8)
project( shipDetectionApp )
#find_package( OpenCV REQUIRED )
#find_package( OSSIM REQUIRED )
FILE(GLOB SOURCE_FILES *.cpp)
set(LIBRARIES ${OSSIM_LIBRARIES} ${OPENCV_LIBRARIES} ${SHAPELIB_LIRARY})
set(INCLUDES ${OSSIM_INCLUDE_DIR} ${OPENCV_INCLUDE_DIR} )
add_executable( shipDetectionApp ${SOURCE_FILES} )
include_directories( shipDetectionApp ${INCLUDES})
target_link_libraries( shipDetectionApp ${LIBRARIES} )

message("====Project: shipDetectionApp====")
message("====USING THE FOLLOWING LOCATIONS====") 
message("SOURCE FILES:			${SOURCE_FILES}")
message("OPENCV_INCLUDE_DIR:		${OPENCV_INCLUDE_DIR}")
message("OPENCV_LIBRARIES:		${OPENCV_LIBRARIES}")
message("OSSIM_INCLUDE_DIR:		${OSSIM_INCLUDE_DIR}")
message("OSSIM_LIBRARIES:		${OSSIM_LIBRARIES}")