cmake_minimum_required(VERSION 2.8)
project( shipDetectionApp )
FILE(GLOB SOURCE_FILES *.cpp)
set(LIBRARIES ${OSSIM_LIBRARIES} ${OPENCV_LIBRARIES} ${SHAPELIB_LIRARY} ${CVBLOBS_LIRARY})
set(INCLUDES ${OSSIM_INCLUDE_DIR} ${OPENCV_INCLUDE_DIR} ${SHAPELIB_INCLUDE_DIR} ${CVBLOBS_INCLUDE_DIR} )
add_executable( shipDetectionApp ${SOURCE_FILES} )
include_directories( shipDetectionApp ${INCLUDES})
target_link_libraries( shipDetectionApp ${LIBRARIES} )

message("====Project: shipDetectionApp====")
message("====USING THE FOLLOWING LOCATIONS====") 
message("SOURCE FILES:			${SOURCE_FILES}")
message("OPENCV_INCLUDE_DIR:		${OPENCV_INCLUDE_DIR}")
message("OPENCV_LIBRARIES:		${OPENCV_LIBRARIES}")
message("OSSIM_INCLUDE_DIR:		${OSSIM_INCLUDE_DIR}")
message("OSSIM_LIBRARIES:		${OSSIM_LIBRARIES}")
message("SHAPELIB_INCLUDE_DIR:		${SHAPELIB_INCLUDE_DIR}")
message("SHAPELIB_LIRARY:		${SHAPELIB_LIRARY}")
message("CVBLOBS_INCLUDE_DIR:		${CVBLOBS_INCLUDE_DIR}")
message("CVBLOBS_LIRARY:		${CVBLOBS_LIRARY}")